@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
  - ICD.Connect.Conferencing.Mock project, relevant project files
  - Mock conferencing device + settings, to simulate a conferencing device such as a cisco codec
  - Mock dialing device control, to simulate a dialer
+ - Conferencing Client and Server Devices, to allow RPC control of Dialing Controls, and Conferencing Devices
 
 ### Changed
  - Make the cisco codec properly update its do not disturb and auto answer values
